# haskell-hedgehog-classes

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  cabal.project  hedgehog-classes.cabal
app/: Main.hs
hedgehog-classes/: CHANGELOG.md
hedgehog-classes/src/Hedgehog/Classes/: Alternative.hs  Applicative.hs  Arrow.hs  Bifoldable.hs  Bits.hs  Category.hs  Common.hs  Eq.hs  Functor.hs  Generic.hs  Ix.hs  MonadFix.hs  Monoid.hs  Semigroup.hs  Show.hs
hedgehog-classes/src/Hedgehog/Classes/Common/: ApTrans.hs  Bottom.hs  Equation.hs  Gen.hs  Laws.hs  Types.hs
hedgehog-classes/test/Spec/: Applicative.hs  Bifoldable.hs  Bifunctor.hs  Bits.hs  Comonad.hs  Enum.hs  Foldable.hs  Functor.hs  Generic.hs  Json.hs  Ord.hs  Prim.hs  Storable.hs
src/: HedgehogClasses.hs
src/Hedgehog/: Classes.hs
src/Hedgehog/Classes/: Alternative.hs  Applicative.hs  Arrow.hs  Bifoldable.hs  Bifunctor.hs  Binary.hs  Bitraversable.hs  Bits.hs  Category.hs  Common.hs  Comonad.hs  Contravariant.hs  Enum.hs  Eq.hs  Foldable.hs  Functor.hs  Generic.hs  Integral.hs  Json.hs  MVector.hs  Monad.hs  MonadIO.hs  MonadPlus.hs  MonadZip.hs  Monoid.hs  Ord.hs  Prim.hs  Profunctor.hs  Semigroup.hs  Semiring.hs  Show.hs  ShowRead.hs  Storable.hs  Traversable.hs
src/Hedgehog/Classes/Common/: Compat.hs  Equation.hs  Func.hs  Gen.hs  IO.hs  Laws.hs  PP.hs  Property.hs
tasty-hedgehog-classes/: CHANGELOG.md  LICENSE  tasty-hedgehog-classes.cabal
tasty-hedgehog-classes/src/Test/Tasty/Hedgehog/: Classes.hs
test/: Spec.hs
test/Spec/: Alternative.hs  Applicative.hs  Arrow.hs  Bifoldable.hs  Binary.hs  Bitraversable.hs  Category.hs  Comonad.hs  Contravariant.hs  Enum.hs  Eq.hs  Foldable.hs  Integral.hs  Ix.hs  MVector.hs  Monad.hs  MonadIO.hs  MonadPlus.hs  MonadZip.hs  Monoid.hs  Ord.hs  Profunctor.hs  Semigroup.hs  Semiring.hs  Show.hs  ShowRead.hs  Storable.hs  Traversable.hs
