cabal-version: 2.0
name: 
  hedgehog-classes
version:
  0.0.0
synopsis:
  Hedgehog will eat your typeclass bugs
description:
  This library provides Hedgehog properties to ensure
  that typeclass instances adhere to the set of laws
  that they are supposed to. There are other libraries
  that do similar things, such as `genvalidity-hspec` and `checkers`.
  This library differs from other solutions by not introducing any
  new typeclasses that the user needs to learn, and otherwise minimal
  API overhead.
  .
  This library is directly inspired by `quickcheck-classes`.
homepage:
  https://github.com/chessai/hedgehog-classes
bug-reports:
  https://github.com/chessai/hedgehog-classes/issues
license:
  BSD3
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai1996@gmail.com
copyright:
  2019 chessai
category:
  Testing
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
    GHC == 8.2.2
  , GHC == 8.4.4
  , GHC == 8.6.3

source-repository head
  type:                git
  location:            https://github.com/chessai/hedgehog-classes.git

library
  hs-source-dirs:
    src
  exposed-modules:
    Hedgehog.Classes
  other-modules:
    Hedgehog.Classes.Alternative
    Hedgehog.Classes.Applicative
    Hedgehog.Classes.Arrow
    Hedgehog.Classes.Bifunctor
    Hedgehog.Classes.Bits
    Hedgehog.Classes.Category
    Hedgehog.Classes.Common
    Hedgehog.Classes.Contravariant
    Hedgehog.Classes.Enum
    Hedgehog.Classes.Eq
    Hedgehog.Classes.Foldable
    Hedgehog.Classes.Functor
    Hedgehog.Classes.Integral
    Hedgehog.Classes.Monad
    Hedgehog.Classes.MonadFix
    Hedgehog.Classes.MonadIO
    Hedgehog.Classes.MonadPlus
    Hedgehog.Classes.MonadZip
    Hedgehog.Classes.Monoid
    Hedgehog.Classes.Ord
    Hedgehog.Classes.Semigroup
    Hedgehog.Classes.Show
    Hedgehog.Classes.ShowRead
    Hedgehog.Classes.Storable
    Hedgehog.Classes.Traversable
  build-depends:
      base >= 4.10.1.0 && < 4.13
    , hedgehog >= 0.6 && < 0.7
    , containers
    , transformers
  ghc-options:
    -Wall
    -Werror
  default-language:
    Haskell2010

--test-suite hedgehog-classes-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--
--  build-depends:       base >= 4.10.1.0 && < 4.13
--                     , hedgehog-classes
--
--  ghc-options:         -Wall
--                       -threaded
--                       -rtsopts
--                       -with-rtsopts=-N
--                       -Wall
--                       -Werror
--
-- default-language:    Haskell2010
