cabal-version: 2.0
name: 
  hedgehog-classes
version:
  0.0.0
synopsis:
  Hedgehog will eat your typeclass bugs
description:
  This library provides Hedgehog properties to ensure
  that typeclass instances adhere to the set of laws
  that they are supposed to. There are other libraries
  that do similar things, such as `genvalidity-hspec` and `checkers`.
  This library differs from other solutions by not introducing any
  new typeclasses that the user needs to learn, and otherwise minimal
  API overhead.
  .
  This library is directly inspired by `quickcheck-classes`.
homepage:
  https://github.com/chessai/hedgehog-classes
bug-reports:
  https://github.com/chessai/hedgehog-classes/issues
license:
  BSD3
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai1996@gmail.com
copyright:
  2019 chessai
category:
  Testing
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
    GHC == 8.2.2
  , GHC == 8.4.4
  , GHC == 8.6.3

source-repository head
  type:                git
  location:            https://github.com/chessai/hedgehog-classes.git

library
  hs-source-dirs:
    src
  exposed-modules:
    Hedgehog.Classes
  other-modules:
    Hedgehog.Classes.Alternative
    Hedgehog.Classes.Applicative
    Hedgehog.Classes.Arrow
    Hedgehog.Classes.Bifoldable
    Hedgehog.Classes.Bifunctor
    Hedgehog.Classes.Bitraversable
    Hedgehog.Classes.Bits
    Hedgehog.Classes.Category
    Hedgehog.Classes.Common
      Hedgehog.Classes.Common.ApTrans
      Hedgehog.Classes.Common.Bottom
      Hedgehog.Classes.Common.Equation
      Hedgehog.Classes.Common.Func
      Hedgehog.Classes.Common.Gen
      Hedgehog.Classes.Common.IO
      Hedgehog.Classes.Common.Laws
      Hedgehog.Classes.Common.Property
    Hedgehog.Classes.Contravariant
    Hedgehog.Classes.Enum
    Hedgehog.Classes.Eq
    Hedgehog.Classes.Foldable
    Hedgehog.Classes.Functor
    Hedgehog.Classes.Generic
    Hedgehog.Classes.Integral
    Hedgehog.Classes.Ix
    Hedgehog.Classes.Json
    Hedgehog.Classes.Monad
--    Hedgehog.Classes.MonadFix
    Hedgehog.Classes.MonadIO
    Hedgehog.Classes.MonadPlus
    Hedgehog.Classes.MonadZip
    Hedgehog.Classes.Monoid
    Hedgehog.Classes.Ord
    Hedgehog.Classes.Semigroup
    Hedgehog.Classes.Semiring
    Hedgehog.Classes.Show
    Hedgehog.Classes.ShowRead
    Hedgehog.Classes.Storable
    Hedgehog.Classes.Traversable
  build-depends:
      base >= 4.10.1.0 && < 4.13
    , hedgehog >= 0.6 && < 0.7
    , aeson 
    , containers
    , semirings    ^>= 0.3.1.1 
    , transformers ^>= 0.5.0.0
  ghc-options:
    -Wall
    -Werror
  default-language:
    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  other-modules:       Spec.Alternative
                       Spec.Applicative
                       Spec.Arrow
                       Spec.Bifoldable
                       Spec.Bifunctor
                       Spec.Bitraversable
                       Spec.Bits
                       Spec.Category
                       Spec.Contravariant
                       Spec.Enum
                       Spec.Eq
                       Spec.Foldable
                       Spec.Functor
                       Spec.Generic
                       Spec.Integral
                       Spec.Ix
                       Spec.Json
                       Spec.Monad
                       Spec.MonadIO
                       Spec.MonadPlus
                       Spec.MonadZip
                       Spec.Monoid
                       Spec.Ord
                       Spec.Semigroup
                       Spec.Show
                       Spec.ShowRead
                       Spec.Storable
                       Spec.Traversable

  build-depends:       base >= 4.10.1.0 && < 4.13
                     , aeson 
                     , containers 
                     , hedgehog 
                     , hedgehog-classes

  ghc-options:         -Wall
 
  default-language:    Haskell2010
