cabal-version: 2.2
name:
  tasty-hedgehog-classes
version:
  0.1
synopsis:
  Hedgehog will eat your typeclass bugs
description:
  This library extends `hedgehog-classes` with `tasty`.
homepage:
  https://github.com/hedgehogqa/haskell-hedgehog-classes
bug-reports:
  https://github.com/hedgehogqa/haskell-hedgehog-classes/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai1996@gmail.com
copyright:
  2019 chessai
category:
  Testing
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with: GHC == 8.6.5, GHC == 8.8.1

source-repository head
  type:
    git
  location:
    https://github.com/hedgehogqa/haskell-hedgehog-classes.git

library
  hs-source-dirs:
    src
  exposed-modules:
    Test.Tasty.Hedgehog.Classes
  build-depends:
    , base >= 4.12 && < 4.14
    , hedgehog >= 1 && < 1.1
    , hedgehog-classes >= 0.2 && < 0.3
    , tasty >= 1.2 && < 1.3
    , tasty-hedgehog >= 1.0 && < 1.1
  ghc-options:
    -Wall
  default-language:
    Haskell2010
